função q gera dos endereços

--- a/raster.ipynb
+++ b/raster.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Windows\n",
+      "AMD64\n",
+      "Windows-10-10.0.19045-SP0\n",
+      "uname_result(system='Windows', node='C118', release='10', version='10.0.19045', machine='AMD64')\n",
+      "10.0.19045\n",
+      "('', ('', '', ''), '')\n"
+     ]
+    }
+   ],
    "source": [
     "import geopandas as gpd\n",
     "import pandas as pd\n",
@@ -41,9 +54,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\leonardo.santos\\Documents\\raster\\venv\\Lib\\site-packages\\geopandas\\geodataframe.py:1443: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  super().__setitem__(key, value)\n"
+     ]
+    }
+   ],
    "source": [
     "file = 'gpd.csv'\n",
     "\n",
@@ -89,16 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_colors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,32 +312,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "endereços = []\n",
-    "pasta_tiles = 'tiles'\n",
-    "output_dir =  pasta_tiles + os.sep + 'out'\n",
+    "def make_adress(data, filename_int,mac_int,ano_int,mes_int,dia_int,hora_e_minuto_int):\n",
+    "    endereços = []\n",
+    "    pasta_tiles = 'tiles'\n",
+    "    output_dir =  pasta_tiles + os.sep + 'out'\n",
+    "\n",
+    "    for i in tqdm(data):\n",
+    "        mask = pd.unique(df_colors.cor) == pd.unique(i.cor)\n",
+    "        gdf_data = i\n",
+    "        if (mask).any():\n",
+    "            color_list = df_colors.color_list.loc[mask]\n",
+    "            gdf_data = defining_color(i,color_list.reset_index(drop=True)[0])\n",
+    "        make_tif(gdf_data)\n",
+    "        options = {'zoom': (7, 19)}\n",
+    "        generate_tiles('rasterize.tif',output_dir, **options)\n",
+    "        layer_terminator = gdf_data.end.loc[0]\n",
+    "        a = make_tree(output_dir, filename_int, mac_int, ano_int , mes_int , dia_int  ,hora_e_minuto_int , layer_terminator , pasta_tiles)\n",
+    "        endereços.append(a)\n",
+    "        os.remove('rasterize.tif')\n",
+    "        return endereços"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cor</th>\n",
+       "      <th>color_list</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Humidity_rastro</td>\n",
+       "      <td>[Hum_L3, Hum_L2, Hum_L1, Hum_0, Hum_H1, Hum_H2...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>App_rastro</td>\n",
+       "      <td>[App_L3, App_L2, App_L1, App_0, App_H1, App_H2...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Produzindo_rastro</td>\n",
+       "      <td>[Vel_L3, Vel_L2, Vel_L1, Vel_0, Vel_H1, Vel_H2...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 cor                                         color_list\n",
+       "0    Humidity_rastro  [Hum_L3, Hum_L2, Hum_L1, Hum_0, Hum_H1, Hum_H2...\n",
+       "1         App_rastro  [App_L3, App_L2, App_L1, App_0, App_H1, App_H2...\n",
+       "2  Produzindo_rastro  [Vel_L3, Vel_L2, Vel_L1, Vel_0, Vel_H1, Vel_H2..."
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "filename_int = 'COMBINE_D8A01D55C8C6_220928_231502_80_RAW'\n",
     "mac_int = 'D8A01D55C8C6'\n",
     "ano_int = '22'\n",
     "mes_int = '09'\n",
     "dia_int = '28'\n",
     "hora_e_minuto_int = '2315'\n",
-    "for i in tqdm(data):\n",
-    "    mask = pd.unique(df_colors.cor) == pd.unique(i.cor)\n",
-    "    gdf_data = i\n",
-    "    if (mask).any():\n",
-    "        color_list = df_colors.color_list.loc[mask]\n",
-    "        gdf_data = defining_color(i,color_list.reset_index(drop=True)[0])\n",
-    "    make_tif(gdf_data)\n",
-    "    options = {'zoom': (7, 19)}\n",
-    "    generate_tiles('rasterize.tif',output_dir, **options)\n",
-    "    layer_terminator = gdf_data.end.loc[0]\n",
-    "    a = make_tree(output_dir, filename_int, mac_int, ano_int , mes_int , dia_int  ,hora_e_minuto_int , layer_terminator , pasta_tiles)\n",
-    "    endereços.append(a)\n",
-    "    os.remove('rasterize.tif')"
+    "endereços = make_adress(data,filename_int,mac_int,ano_int,mes_int,dia_int,hora_e_minuto_int)"
    ]
   }
  ],
